--- a/lab-hypothesis-testing.ipynb
+++ b/lab-hypothesis-testing.ipynb
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#libraries\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
     "import numpy as np\n",
-    "\n"
+    "from scipy.stats import ttest_ind\n",
+    "from statsmodels.multivariate.manova import MANOVA"
    ]
   },
   {
@@ -296,12 +296,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- H0: mu type Dragon AVG HP <= type Grass AVG HP\n",
+    "- H1: mu type Dragon AVG HP > type_Grass AVG HP\n",
+    "- alpha = 0.05"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "dragon_type = df[(df[\"Type 1\"] == \"Dragon\") | (df[\"Type 2\"] == \"Dragon\")][\"HP\"]\n",
+    "grass_type = df[((df[\"Type 1\"] == \"Grass\") | (df[\"Type 2\"] == \"Grass\"))][\"HP\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "dragon_p = ttest_ind(dragon_type, grass_type, alternative = \"greater\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value: 0.00001\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'p-value: {dragon_p.pvalue:.5f}')"
    ]
   },
   {
@@ -312,12 +350,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- H0: mu Legendary stats = Non Legendary stats\n",
+    "- H1: mu Legendary stats != Non Legendary stats\n",
+    "- nivel significanci = 5% -> alpha = 0.05"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#code here"
+    "stats = [\"HP\", \"Attack\", \"Defense\", \"Sp. Atk\", \"Sp. Def\", \"Speed\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legendary = df[df[\"Legendary\"] == True][stats]\n",
+    "non_legendary = df[df[\"Legendary\"] == False][stats]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "legendary_p = {}\n",
+    "\n",
+    "for stat in stats:\n",
+    "    legendary = df[df[\"Legendary\"] == True][stat]\n",
+    "    non_legendary = df[df[\"Legendary\"] == False][stat]\n",
+    "    \n",
+    "    _, p_val = ttest_ind(legendary, non_legendary, equal_var=False)\n",
+    "    legendary_p[stat] = p_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 1.0026911708035284e-13,\n",
+       " 'Attack': 2.520372449236646e-16,\n",
+       " 'Defense': 4.8269984949193316e-11,\n",
+       " 'Sp. Atk': 1.5514614112239812e-21,\n",
+       " 'Sp. Def': 2.2949327864052826e-15,\n",
+       " 'Speed': 1.049016311882451e-18}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legendary_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.049016311882451e-18"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_val"
    ]
   },
   {
@@ -337,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +571,7 @@
        "4       624.0       262.0         1.9250             65500.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,22 +601,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def euclidean_distance(lat1, lon1, lat2, lon2):\n",
+    "    return np.sqrt((lat1 - lat2)**2 + (lon1 - lon2)**2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "school_coords = (-118, 34)\n",
+    "hospital_coords = (-122, 37)\n",
+    "\n",
+    "df['dist_school'] = euclidean_distance(df['longitude'], df['latitude'], *school_coords)\n",
+    "df['dist_hospital'] = euclidean_distance(df['longitude'], df['latitude'], *hospital_coords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['close_to_services'] = (df['dist_school'] < 0.5) | (df['dist_hospital'] < 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "close_prices = df[df['close_to_services']]['median_house_value']\n",
+    "far_prices = df[~df['close_to_services']]['median_house_value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: 37.992, P-value: 0.00000\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_stat, p_value = ttest_ind(close_prices, far_prices, equal_var=False)\n",
+    "print(f\"T-statistic: {t_stat:.3f}, P-value: {p_value:.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "H₀ (nula): El precio medio de las casas cercanas y lejanas a servicios es igual.\n",
+    "\n",
+    "H₁ (alternativa): El precio medio de las casas cercanas a servicios es distinto (y se sospecha que más alto).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con un valor p < 0.05, rechazamos la hipótesis nula. Esto indica que:\n",
+    "\n",
+    "Las casas ubicadas a menos de 0.5 unidades de distancia de una escuela o un hospital tienen un precio medio significativamente diferente (y notablemente más alto) que aquellas que están más alejadas."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -512,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
